force-app/main/default/objects/SLCA2__CA_test__c/SLCA2__CA_test__c.object-meta.xml
<CustomObject>
    <label>CA_test</label>
    <nameField>
        <label>CA_test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>