force-app/main/default/objects/SLCA2__CA_test__c/fields/SLCA2__End__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__End__c</fullName>
    <label>End</label>
    <type>DateTime</type>
</CustomField>