force-app/main/default/objects/SLCA2__CA_test__c/fields/SLCA2__Message__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>